# ThermalSimulatorVansvardhanProject

./: .env.example  .gitignore  APPLY_PATCH.sh  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  UPGRADE_ORDER.md  VALIDATION.md  app.py  compose.yaml  pyproject.toml  requirements.txt  run.md  run_simulation.py
data/: materials_fixed.yaml  mattress_intelligence.sqlite3
examples/: demo_catalogue.json
outputs/: run_0c19e5c717a8e346.xlsx
pages/: 0_Home.py  1_Evidence_Collection_Lab.py  2_Thermal_Prototype_Lab.py
src/mattress_intelligence/: __init__.py  api.py  assets.py  celery_app.py  cli.py  configurations.py  crawler.py  entities.py  exporter.py  extraction.py  firecrawl.py  graph.py  inference.py  jina.py  jobs.py  llm.py  material_decoder.py  materials.py  models.py  network.py  normalization.py  object_store.py  pipeline.py  search.py  settings.py  similarity.py  storage.py  streamlit_app.py  tasks.py  thermal.py  ui_helpers.py
src/mattress_intelligence/data/: materials.yaml
src/mattress_thermal/: __init__.py  __main__.py  cli.py  simulation.py
tests/: test_acquisition_services.py  test_algorithms.py  test_crawler.py  test_extraction.py  test_jobs_and_ui_exports.py  test_llm.py  test_models_and_normalization.py  test_pipeline.py  test_search.py  test_services_search_fallback.py  test_simulation.py
