[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brixta-mattress-intelligence"
version = "1.4.0"
description = "Distributed evidence acquisition and deterministic mattress construction intelligence"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
dependencies = [
    "lxml>=5.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.4",
    "streamlit>=1.40",
    "XlsxWriter>=3.2",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "pytesseract>=0.3.13",
    "minio>=7.2",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
]

[project.optional-dependencies]
crawl = ["playwright>=1.50"]
algorithms = ["ortools>=9.12"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9", "openpyxl>=3.1"]
full = [
    "playwright>=1.50",
    "ortools>=9.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
mattress-lab = "mattress_intelligence.cli:main"
mattress-intel = "mattress_intelligence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mattress_intelligence = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
